--- a/references.bib
+++ b/references.bib
@@ -15,5 +15,28 @@
   pages = {97–111},
   numpages = {15}
 }
-
+@Manual{RStudio22,
+    title = {RStudio: Integrated Development Environment for R},
+    author = {{Posit team}},
+    organization = {Posit Software, PBC},
+    address = {Boston, MA},
+    year = {2022},
+    url = {http://www.posit.co/},
+  }
+  @Manual{Rcore22,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2022},
+    url = {https://www.R-project.org/},
+  }
+@article{wickham_tidy_2014,
+	title = {Tidy data},
+	volume = {59},
+	url = {http://www.jstatsoft.org/v59/i10/},
+	journal = {The Journal of Statistical Software},
+	author = {Wickham, Hadley},
+	year = {2014},
+}
 
