--- a/packages.bib
+++ b/packages.bib
@@ -19,15 +19,15 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2022},
-  note = {R package version 1.0.9},
+  note = {R package version 1.0.10},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-flextable,
   title = {flextable: Functions for Tabular Reporting},
-  author = {David Gohel},
+  author = {David Gohel and Panagiotis Skintzos},
   year = {2022},
-  note = {R package version 0.7.2},
+  note = {R package version 0.8.3},
   url = {https://CRAN.R-project.org/package=flextable},
 }
 
@@ -35,15 +35,23 @@
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2022},
-  note = {R package version 3.3.6},
+  note = {R package version 3.4.0},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-ggspatial,
+  title = {ggspatial: Spatial Data Framework for ggplot2},
+  author = {Dewey Dunnington},
+  year = {2022},
+  note = {R package version 1.1.7},
+  url = {https://CRAN.R-project.org/package=ggspatial},
 }
 
 @Manual{R-gt,
   title = {gt: Easily Create Presentation-Ready Display Tables},
-  author = {Richard Iannone and Joe Cheng and Barret Schloerke},
+  author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and JooYoung Seo},
   year = {2022},
-  note = {R package version 0.6.0},
+  note = {R package version 0.8.0},
   url = {https://CRAN.R-project.org/package=gt},
 }
 
@@ -59,23 +67,23 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2022},
-  note = {R package version 1.39},
+  note = {R package version 1.41},
   url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.8.0},
+  year = {2022},
+  note = {R package version 1.9.0},
   url = {https://CRAN.R-project.org/package=lubridate},
 }
 
 @Manual{R-mosaic,
   title = {mosaic: Project MOSAIC Statistics and Mathematics Teaching Utilities},
   author = {Randall Pruim and Daniel T. Kaplan and Nicholas J. Horton},
-  year = {2021},
-  note = {R package version 1.8.3},
+  year = {2022},
+  note = {R package version 1.8.4.2},
   url = {https://CRAN.R-project.org/package=mosaic},
 }
 
@@ -83,7 +91,7 @@
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
   year = {2022},
-  note = {R package version 2.1.2},
+  note = {R package version 2.1.3},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
@@ -91,7 +99,7 @@
   title = {readxl: Read Excel Files},
   author = {Hadley Wickham and Jennifer Bryan},
   year = {2022},
-  note = {R package version 1.4.0},
+  note = {R package version 1.4.1},
   url = {https://CRAN.R-project.org/package=readxl},
 }
 
@@ -99,31 +107,40 @@
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
   year = {2022},
-  note = {R package version 1.2.0},
+  note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=scales},
+}
+
+@Manual{R-sf,
+  title = {sf: Simple Features for R},
+  author = {Edzer Pebesma},
+  year = {2022},
+  note = {R package version 1.0-9},
+  url = {https://CRAN.R-project.org/package=sf},
 }
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
   year = {2022},
-  note = {http://stringr.tidyverse.org},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=stringr},
 }
 
 @Manual{R-suncalc,
   title = {suncalc: Compute Sun Position, Sunlight Phases, Moon Position and Lunar
 Phase},
   author = {Benoit Thieurmel and Achraf Elmarhraoui},
-  year = {2019},
-  note = {R package version 0.5.0},
+  year = {2022},
+  note = {R package version 0.5.1},
   url = {https://github.com/datastorm-open/suncalc},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.3.1},
+  year = {2022},
+  note = {R package version 1.3.2},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
@@ -178,6 +195,18 @@ Phase},
   pages = {77--102},
   year = {2017},
   url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
+}
+
+@Article{sf2018,
+  author = {Edzer Pebesma},
+  title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-009},
+  url = {https://doi.org/10.32614/RJ-2018-009},
+  pages = {439--446},
+  volume = {10},
+  number = {1},
 }
 
 @Article{tidyverse2019,
