--- a/tidy.qmd
+++ b/tidy.qmd
@@ -4,7 +4,7 @@ format:
   html:
      code-fold: true
      code-summary: "Show the code"
-bibliography: MyLibrary.bib
+bibliography: references.bib
 number-sections: true
 ---
 
